@@ -8,12 +8,13 @@ else
     LIBTOOLIZE=libtoolize
 fi
 
+ACLOCAL_OPT=""
 if [ -d /usr/local/share/aclocal ]; then
-    ACLOCAL_DIR=/usr/local/share/aclocal
+    ACLOCAL_OPT="-I /usr/local/share/aclocal"
 elif [ -d /opt/local/share/aclocal ]; then
-    ACLOCAL_DIR=/opt/local/share/aclocal
+    ACLOCAL_OPT="-I /opt/local/share/aclocal"
 elif [ -d /usr/share/aclocal ]; then
-    ACLOCAL_DIR=/usr/share/aclocal
+    ACLOCAL_OPT="-I /usr/share/aclocal"
 fi
 
 if [ ! -d use ]; then
@@ -22,7 +23,7 @@ fi
 
 autoheader
 
-aclocal -I $ACLOCAL_DIR
+aclocal $ACLOCAL_OPT
 
 $LIBTOOLIZE --automake --copy
 automake --add-missing --copy
